@@ -3,6 +3,7 @@
     * Inclusion/exclusion of future dated posts (#59)
     * Generation for a specific time (#59)
     * site.time allocated on render not per site_payload invocation (#59)
+    * pages now present in the site payload and can be used through the site.pages variable
   * Bug Fixes
     * Render highlighted code for non markdown/textile pages (#116)
     * Expand source to full path so includes work anywhere (#101)
